# vox_manager

./: CMakeLists.txt  package.xml  setup.py
config/: 4501.dic  4501.lm  4501.log_pronounce  4501.sent  6643.dic  6643.lm  6643.log_pronounce  6643.sent  6643.vocab  TAR4501.tgz  TAR6643.tgz  sonos_test_corpus
data/: recording.flac
launch/: voice_cmd.launch  voice_synth.launch
src/vox_manager/: gspeech.py  vox_sequencer.py
